most basic possible frontend

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,36 @@
 .App {
   text-align: center;
+  height: 100vh;
+  background-color: #2D2D2D;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+  height: 100px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.node {
+  padding: 8px 50px 5px;
+  margin: 0 0 10px 0;
+  text-align: left;
+  font-size: 20pt;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.default-class {
+  background-color:#2D2D40;
+} 
+
+.default-class-selected {
+  background-color: rgb(163, 201, 230);
+  color: black;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.meristem-class {
+  background-color: #2D3A2D;
+}
+
+.meristem-class-selected {
+  background-color: rgb(146, 255, 195);
+  color: black;
 }
